syntax = "proto3";
package slots;

option go_package = "snple.com/kokomi/pb/slots;slots";

import "device_message.proto";
import "generic_message.proto";

service DeviceService {
    rpc Update(pb.Device) returns (pb.Device) {}
    rpc View(pb.MyEmpty) returns (pb.Device) {}
}
